--- a/src/Workbench/H.LowCode.Workbench/Pages/Index.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Index.razor
@@ -60,16 +60,13 @@
                 <GridCol Span="24">
                     <p>页面设计示例 (快捷入口)：</p>
                     <p>
-                        <a href="/designer/testapp/newpage" target="_blank">页面设计器 (新增自定义)</a>
+                        <a href="/designer/testapp/newpage" target="_blank">页面设计器 (新增)</a>
                     </p>
                     <p>
-                        <a href="/designer/testapp/newpage?pt=1" target="_blank">页面设计器 (新增表单)</a>
+                        <a href="designer/caseapp/bac59efe-db6e-45bd-98ac-87e04446e53d" target="_blank">页面设计器 (基础列表)</a>
                     </p>
                     <p>
-                        <a href="/designer/testapp/newpage?pt=2" target="_blank">页面设计器 (新增列表)</a>
-                    </p>
-                    <p>
-                        <a href="/designer/testapp/88888888-8888-8888-8888-888888888888" target="_blank">页面设计器 (已有元数据)</a>
+                        <a href="designer/caseapp/f5b76e98-342f-46c3-96d6-17693857231d" target="_blank">页面设计器 (基础表单)</a>
                     </p>
                 </GridCol>
             </GridRow>
@@ -77,7 +74,10 @@
                 <GridCol Span="24">
                     <p>页面渲染示例 (快捷入口)：</p>
                     <p>
-                        <a href="/testapp/index" target="_blank">页面渲染示例</a>
+                        <a href="caseapp/bac59efe-db6e-45bd-98ac-87e04446e53d" target="_blank">页面渲染 (基础列表)</a>
+                    </p>
+                    <p>
+                        <a href="caseapp/f5b76e98-342f-46c3-96d6-17693857231d" target="_blank">页面渲染 (基础表单)</a>
                     </p>
                 </GridCol>
             </GridRow>
