--- a/src/Host/H.LowCode.Admin.Host/Components/App.razor
+++ b/src/Host/H.LowCode.Admin.Host/Components/App.razor
@@ -7,13 +7,13 @@
     <base href="/" />
     <link rel="icon" type="image/png" href="logo.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="logo.png" />
-    <!-- H.LowCode.Workbench.Host -->
+    <!-- 所有项目的razor文件中的 css -->
     <link rel="stylesheet" href="H.LowCode.Admin.Host.styles.css" />
-    <link rel="stylesheet" href="admin.css" />
 
     <!-- Ant Design Pro Blazor (antblazor库会动态引入js,css资源,此处可无需引入.为避免在按需动态引入时样式渲染闪烁问题,此处提前引入) -->
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
     <link href="_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css" rel="stylesheet" />
+
     <link href="manifest.json" rel="manifest" />
 
     <HeadOutlet @rendermode="@InteractiveAuto" />
