--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/LcTable.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/LcTable.razor
@@ -68,7 +68,7 @@
         {
             var columns = new List<TableColumnSchema>()
             {
-                new() { Id = Guid.NewGuid().ToString(), Name = "_temp", Title = "(待添加列)" }
+                new() { Name = "_temp", Title = "(待添加列)" }
             };
             return columns;
         }
