--- a/src/Workbench/H.LowCode.Workbench/Pages/SolutionCenter.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/SolutionCenter.razor
@@ -12,7 +12,7 @@
         overflow: hidden;
         margin: -24px -24px 10px -24px;
         background-size: 100% 160px;
-        background-image: url(https://img.alicdn.com/imgextra/i2/O1CN01yp2QLE1eCw9HpYIy5_!!6000000003836-0-tps-3171-1784.jpg);
+        background-image: url(_content/H.LowCode.Workbench/images/img_002.jpg);
     }
 </style>
 
