修改 ComponentValueType 枚举值

--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySetting.razor
@@ -7,7 +7,11 @@
         <BasicPropertyItem Component="@Component"></BasicPropertyItem>
 
         @* 数据源属性 *@
-        <DataSourcePropertyItem Component="@Component"></DataSourcePropertyItem>
+        @if (Component.ComponentProperty.ComponentValueType == ComponentValueType.Option
+            || Component.ComponentProperty.ComponentValueType == ComponentValueType.Table)
+        {
+            <DataSourcePropertyItem Component="@Component"></DataSourcePropertyItem>
+        }
 
         @*扩展属性*@
         <ExtensionPropertyItem Component="@Component"></ExtensionPropertyItem>
