--- a/src/DesignEngine/H.LowCode.PartsDesignEngine/SettingPanel/PropertySetting.razor
+++ b/src/DesignEngine/H.LowCode.PartsDesignEngine/SettingPanel/PropertySetting.razor
@@ -69,7 +69,7 @@
 
         @*"type": "integer"*@
         @*"type": "number"*@
-        @if (Component.ComponentProperty.ComponentValueType == ComponentValueType.Integer || Component.ComponentProperty.ComponentValueType == ComponentValueType.Number)
+        @if (Component.ComponentProperty.ComponentValueType == ComponentValueType.Integer || Component.ComponentProperty.ComponentValueType == ComponentValueType.Double)
         {
             if (Component.ComponentProperty.IsShowProperty(nameof(ComponentPropertySchema.Maximum)))
             {
