--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/BasicPropertyItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/BasicPropertyItem.razor
@@ -66,7 +66,8 @@
 
 @*"type": "integer"*@
 @*"type": "number"*@
-@if (Component.ComponentProperty.ComponentValueType == ComponentValueType.Integer || Component.ComponentProperty.ComponentValueType == ComponentValueType.Number)
+@if (Component.ComponentProperty.ComponentValueType == ComponentValueType.Integer
+              || Component.ComponentProperty.ComponentValueType == ComponentValueType.Double)
 {
     if (Component.ComponentProperty.IsShowProperty(nameof(ComponentPropertySchema.Maximum)))
     {
