--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/BasicPropertyItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/BasicPropertyItem.razor
@@ -1,6 +1,6 @@
 ﻿@namespace H.LowCode.DesignEngine
 
-<div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">基础</div>
+<div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0 10px;">基础</div>
 @if (Component.IsContainerComponent == false)
 {
     <div class="propertysetting-item">
