--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/DataSourcePropertyItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/DataSourcePropertyItem.razor
@@ -1,6 +1,6 @@
 ﻿@namespace H.LowCode.DesignEngine
 
-<div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">数据源</div>
+<div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:30px 0 10px;">数据源</div>
 <div class="propertysetting-item">
     <label>类型：</label>
     <EnumSelect TEnum="@DataSourceEnum" @bind-Value="@Component.DataSource.DataSourceType">
