--- a/src/DesignEngine/H.LowCode.DesignEngine/wwwroot/designengine.css
+++ b/src/DesignEngine/H.LowCode.DesignEngine/wwwroot/designengine.css
@@ -12,6 +12,11 @@
     height: 100%;
 }
 
+/* ====================== PropertySetting.razor ========================== */
+.propertysetting-item {
+    margin: 5px 15px 20px 10px;
+}
+
 /* ====================== 覆盖 ComponentPanel.razor 组件内 antdesign 默认样式 ========================== */
 .componentpanel .ant-tabs-content, .componentpanel .ant-tabs-tabpane {
     height: 100%;
