--- a/src/DesignEngine/H.LowCode.PartsDesignEngine/Layout/PartsDesignEngineLayout.razor
+++ b/src/DesignEngine/H.LowCode.PartsDesignEngine/Layout/PartsDesignEngineLayout.razor
@@ -1,6 +1,8 @@
 ﻿@namespace H.LowCode.PartsDesignEngine
 @inherits LayoutComponentBase
 
+<link href="_content/H.LowCode.PartsDesignEngine/partsdesignengine.css" rel="stylesheet" />
+
 <Layout Class="layout" Style="height:100%;">
     <Content Style="height:100%;" @rendermode="new InteractiveAutoRenderMode(false)">
         @Body
