--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LcMap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LcMap.razor
@@ -19,7 +19,7 @@
 
 @code
 {
-    private MapControl? _mapControl;
+    private MapControl _mapControl;
     protected override void OnAfterRender(bool firstRender)
     {
         base.OnAfterRender(firstRender);
