--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/PageTemplates/TableTemplate.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/PageTemplates/TableTemplate.razor
@@ -13,7 +13,7 @@
         </Tree>
     </Sider>
     <Content Style="height: 100%;">
-        <TableWrap></TableWrap>
+        <LcTable></LcTable>
     </Content>
 </Layout>
 
