--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/_Imports.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/_Imports.razor
@@ -6,5 +6,6 @@
 @using AntDesign.TableModels
 @using H.LowCode.DesignEngine.Abstraction
 @using H.LowCode.DesignEngine
+@using H.LowCode.ComponentParts.BasicComponents
 @using H.LowCode.MetaSchema
 @using H.Util.Blazor
