--- a/src/Workbench/H.LowCode.Workbench/Pages/Solutions.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Solutions.razor
@@ -1,8 +1,8 @@
-﻿@page "/workbench/solutioncenter"
+﻿@page "/workbench/solutions"
 @namespace H.LowCode.Workbench
 @layout WorkbenchLayout
 
-<PageTitle>解决方案中心 - H.LowCode</PageTitle>
+<PageTitle>解决方案 - H.LowCode</PageTitle>
 
 <style>
     .solution-banner {
@@ -21,7 +21,7 @@
         <span>低代码平台</span>
         <span style="color: white; -webkit-text-fill-color: transparent;
                 background: -webkit-linear-gradient(360deg, #0089ff 30%, #30e724);
-                background-clip: text; -webkit-background-clip: text;">解决方案中心</span>
+                background-clip: text; -webkit-background-clip: text;">解决方案</span>
     </div>
 </div>
 
