--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
@@ -13,7 +13,7 @@
     </div>
 
     @* 表单页 *@
-    <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">数据源</div>
+    <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:30px 0 10px;">数据源</div>
     <div class="propertysetting-item">
         <label>类型：</label>
         <RadioGroup DefaultValue="DataSourceEnum.None" TValue="DataSourceEnum" @bind-Value="@Page.DataSource.DataSourceType">
