--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/ExtensionPropertyItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/ExtensionPropertyItem.razor
@@ -1,56 +1,53 @@
 ﻿@namespace H.LowCode.DesignEngine
 
-@if (Component.ComponentProperty.ExtensionProperties != null)
+<div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:30px 0 10px;">更多</div>
+
+@foreach (var extPropertyKV in Component.ComponentProperty.ExtensionProperties)
 {
-    <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">更多</div>
+    <div class="propertysetting-item">
+        @if (extPropertyKV.Value.IsShowLabel)
+        {
+            <label>@extPropertyKV.Value.Label：</label>
+        }
 
-    foreach (var extPropertyKV in Component.ComponentProperty.ExtensionProperties)
-    {
-        <div class="propertysetting-item">
-            @if (extPropertyKV.Value.IsShowLabel)
-            {
-                <label>@extPropertyKV.Value.Label：</label>
-            }
+        @if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Text)
+        {
+            <Input TValue="string" @bind-value="@extPropertyKV.Value.StringValue" OnChange="OnStringPropertyChange" />
+        }
+        else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Text_Int)
+        {
+            <Input TValue="int?" @bind-value="@extPropertyKV.Value.IntValue" OnChange="OnIntPropertyChange" />
+        }
+        else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Radio)
+        {
 
-            @if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Text)
-            {
-                <Input TValue="string" @bind-value="@extPropertyKV.Value.StringValue" OnChange="OnStringPropertyChange" />
-            }
-            else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Text_Int)
-            {
-                <Input TValue="int?" @bind-value="@extPropertyKV.Value.IntValue" OnChange="OnIntPropertyChange" />
-            }
-            else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Radio)
-            {
+        }
+        else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Checkbox)
+        {
+            <Checkbox @bind-checked="@extPropertyKV.Value.BoolValue"></Checkbox>
+        }
+        else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Select)
+        {
 
-            }
-            else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Checkbox)
-            {
-                <Checkbox @bind-checked="@extPropertyKV.Value.BoolValue"></Checkbox>
-            }
-            else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Select)
-            {
+        }
+        else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Switch)
+        {
 
-            }
-            else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Switch)
-            {
+        }
+        else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Date)
+        {
 
-            }
-            else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Date)
-            {
+        }
+        else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Textarea)
+        {
 
-            }
-            else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Textarea)
-            {
+        }
 
-            }
-
-            @if (!string.IsNullOrEmpty(extPropertyKV.Value.Description))
-            {
-                <div style="color:#c7c7c7">@extPropertyKV.Value.Description</div>
-            }
-        </div>
-    }
+        @if (!string.IsNullOrEmpty(extPropertyKV.Value.Description))
+        {
+            <div style="color:#c7c7c7">@extPropertyKV.Value.Description</div>
+        }
+    </div>
 }
 
 @code {
