--- a/src/Workbench/H.LowCode.Workbench/_Imports.razor
+++ b/src/Workbench/H.LowCode.Workbench/_Imports.razor
@@ -12,4 +12,6 @@
 @using H.Extensions.System
 @using H.LowCode.Workbench
 @using H.LowCode.MetaSchema
+@using H.LowCode.PartsMetaSchema
+@using H.LowCode.Model
 @using H.Util.Blazor
