"物料中心" 重新改为 "生态中心"

--- a/src/Workbench/H.LowCode.Workbench/Layout/WorkbenchLayout.razor
+++ b/src/Workbench/H.LowCode.Workbench/Layout/WorkbenchLayout.razor
@@ -42,10 +42,10 @@
         },
         new MenuDataItem
         {
-            Path = "/workbench/partscenter",
-            Name = "物料中心",
-            Icon = "api",
-            Key = "partscenter"
+            Path = "/workbench/ecosystem",
+            Name = "生态中心",
+            Icon = "cloud",
+            Key = "ecosystem"
         },
         new MenuDataItem
         {
