--- a/src/Workbench/H.LowCode.Workbench/Pages/Ecosystem/AppPopularTemplates.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Ecosystem/AppPopularTemplates.razor
@@ -58,5 +58,5 @@
     </Body>
 </Card>
 <Card Bordered="true" Style="float:left; width:250px; margin:5px; height:142px;display: flex; align-items: center; justify-content: center;">
-    <a href="/workbench/partscenter">更多模板</a>
+    <a href="/workbench/ecosystem">更多模板</a>
 </Card>
