--- a/src/Workbench/H.LowCode.Workbench/Pages/Solutions.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Solutions.razor
@@ -53,7 +53,23 @@
         </Card>
     </TabPane>
     <TabPane Tab="集成解决方案" Key="tab_template_integration">
-        <Card Title="账号体系集成" Style="float:left; width:300px; margin:5px;">
+        <Card Title="微信集成" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="钉钉集成" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="飞书集成" Style="float:left; width:300px; margin:5px;">
             <Extra>
                 <a href="#">查看</a>
             </Extra>
