--- a/src/DesignEngine/H.LowCode.DesignEngine/Layout/DesignEngineLayout.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Layout/DesignEngineLayout.razor
@@ -2,7 +2,7 @@
 @inherits LayoutComponentBase
 
 <Layout Class="layout" Style="height:100%;">
-    <Content Style="height:100%;" @rendermode="new InteractiveAutoRenderMode(false)">
+    <Content Style="height:100%;">
         @Body
     </Content>
 </Layout>
