- 表格控件支持 "表格按钮" 属性

--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySetting.razor
@@ -14,8 +14,8 @@
         }
 
         @*扩展属性*@
-        @if (Component.ComponentProperty.ExtensionProperties != null
-            && Component.ComponentProperty.ExtensionProperties.Count > 0)
+        @if (Component.ComponentProperty.ExtraProperties != null
+            && Component.ComponentProperty.ExtraProperties.Count > 0)
         {
             <ExtensionPropertyItem Component="@Component"></ExtensionPropertyItem>
         }
