--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/BasicPropertyItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/BasicPropertyItem.razor
@@ -95,7 +95,7 @@
 {
     <div class="propertysetting-item">
         @* <label>表格列：</label> *@
-        <TablePropertyItem Component="@Component" OnTableColumnChange="OnStringPropertyChange"></TablePropertyItem>
+        <TablePropertyItem Component="@Component" OnTablePropertyChange="OnStringPropertyChange"></TablePropertyItem>
     </div>
 }
 
