--- a/src/DesignEngine/H.LowCode.PartsDesignEngine/SettingPanel/PropertySetting.razor
+++ b/src/DesignEngine/H.LowCode.PartsDesignEngine/SettingPanel/PropertySetting.razor
@@ -138,11 +138,11 @@
     }
 
     @*扩展属性*@
-    @if (Component != null && Component.ComponentProperty.ExtensionProperties != null)
+    @if (Component != null && Component.ComponentProperty.ExtraProperties != null)
     {
         <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">更多</div>
 
-        foreach (var extPropertyKV in Component.ComponentProperty.ExtensionProperties)
+        foreach (var extPropertyKV in Component.ComponentProperty.ExtraProperties)
         {
             <div class="propertysetting-item">
                 @if (extPropertyKV.Value.IsShowLabel)
