--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/LcTable.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/LcTable.razor
@@ -7,15 +7,22 @@
        @bind-SelectedRows="_selectedRows" OnChange="OnChange" Size="TableSize.Small">
     <TitleTemplate>
         <Flex Justify="end" Gap="10">
-            <Button Type="primary" @onclick="CreateAsync">新增</Button>
-            <Button Disabled="!_selectedRows.Any()" Danger @onclick="DeleteSelectedAsync">删除选中</Button>
+            @if(_tableSchema.Buttons.Count == 0)
+            {
+                <Button Type="primary" @onclick="CreateAsync">新增</Button>
+                <Button Disabled="!_selectedRows.Any()" Danger @onclick="DeleteSelectedAsync">删除选中</Button>
+            }
+            @foreach (var btn in _tableSchema.Buttons)
+            {
+                <Button Type="@btn.ButtonType" Disabled="@btn.Disabled" @onclick="@(() => ButtonActionAsync(btn.Id))">@btn.Title</Button>
+            }
         </Flex>
     </TitleTemplate>
     <ColumnDefinitions Context="row">
         <Selection />
         @foreach (var key in _data?.FirstOrDefault()?.Keys.ToArray() ?? new string[0])
         {
-            var column = _columns.FirstOrDefault(t => string.Equals(t.Name, key, StringComparison.OrdinalIgnoreCase));
+            var column = _tableSchema.Columns.FirstOrDefault(t => string.Equals(t.Name, key, StringComparison.OrdinalIgnoreCase));
             if (column != null)
             {
                 <PropertyColumn Property="@(c=> c[key])" Title="@column.Title"></PropertyColumn>
@@ -38,7 +45,7 @@
     [Parameter]
     public ComponentSchema Component { get; set; }
 
-    private List<TableColumnSchema> _columns;
+    private TablePropertySchema _tableSchema = new();
     private List<Dictionary<string, object>> _data;
 
     IEnumerable<Dictionary<string, object>> _selectedRows = [];
@@ -50,7 +57,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _columns = GetTableColumesAsync();
+        _tableSchema = GetTableSchemaAsync();
         _data = await GetTableDataAsync(1, 50);
         _total = 50;
     }
@@ -61,19 +68,20 @@
         Console.WriteLine(JsonSerializer.Serialize(queryModel));
     }
 
-    private List<TableColumnSchema> GetTableColumesAsync()
+    private TablePropertySchema GetTableSchemaAsync()
     {
-        if (Component?.ComponentProperty == null || Component.ComponentProperty.TableColumns.IsNullOrEmpty()
-            || Component.ComponentProperty.TableColumns.Trim().Equals("[]"))
+        if (Component?.ComponentProperty == null || Component.ComponentProperty.TablePropertiess.IsNullOrEmpty()
+            || Component.ComponentProperty.TablePropertiess.Trim().Equals("[]"))
         {
-            var columns = new List<TableColumnSchema>()
+            var tableSchema = new TablePropertySchema();
+            tableSchema.Columns = new List<TableColumnSchema>()
             {
                 new() { Name = "_temp", Title = "(待添加列)" }
             };
-            return columns;
+            return tableSchema;
         }
 
-        return JsonSerializer.Deserialize<List<TableColumnSchema>>(Component.ComponentProperty.TableColumns);
+        return JsonSerializer.Deserialize<TablePropertySchema>(Component.ComponentProperty.TablePropertiess);
     }
 
     public async Task<List<Dictionary<string, object>>> GetTableDataAsync(int pageIndex, int pageSize)
@@ -83,7 +91,8 @@
         for (int i = 0; i < 3; i++)
         {
             Dictionary<string, object> row = new Dictionary<string, object>();
-            foreach(var col in _columns){
+            foreach (var col in _tableSchema.Columns)
+            {
                 row.Add(col.Name, string.Empty);
             }
             list.Add(row);
@@ -98,7 +107,7 @@
 
     public async Task EditAsync(Dictionary<string, object> row)
     {
-        string primaryKey = _columns.FirstOrDefault(t => t.IsPrimaryKey)?.Name;
+        string primaryKey = _tableSchema.Columns.FirstOrDefault(t => t.IsPrimaryKey)?.Name;
         await Task.Delay(100);
     }
 
@@ -108,6 +117,11 @@
     }
 
     public async Task DeleteSelectedAsync()
+    {
+        await Task.Delay(100);
+    }
+
+    public async Task ButtonActionAsync(string id)
     {
         await Task.Delay(100);
     }
